--- a/.github/workflows/TerraformDestroy-dev.yml
+++ b/.github/workflows/TerraformDestroy-dev.yml
@@ -98,11 +98,11 @@ jobs:
         ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-    - name: Display URL
-      id: showurl
-      run: |
-        URL_OUTPUT=$(terraform output -raw appgwurl)
-        echo "URLOUTPUT=$URL_OUTPUT" >> $GITHUB_ENV
+    # - name: Display URL
+    #   id: showurl
+    #   run: |
+    #     URL_OUTPUT=$(terraform output -raw appgwurl)
+    #     echo "URLOUTPUT=$URL_OUTPUT" >> $GITHUB_ENV
     
 
        
